--- a/find-the-invisible-dog/color.html
+++ b/find-the-invisible-dog/color.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -10,96 +10,25 @@
 	<script type="text/javascript" src="./ntc.js"></script>
 	
     <title>Select the background color!</title>
-	<style>
-
-	@font-face{font-family:font1;
-	src:url(ft1.ttf);}
-
-	*{font-family:font1;
-	     background-color:#FCE5B0;
-	}
-
-	.title1
-	{
-		font-size:450%;
-		text-decoration:underline;
-	}
-	
-	#selection label
-	{
-		width: 50%;
-		/* height: 100%; */
-		margin-bottom: 10%;
-		font-size:350%;
-	}
-	
-	#selection
-	{	
-		display: flex;
-		flex-wrap: wrap;
-		text-align:center;
-	}
-	
-	.btn
-	{
-		width:25%;
-		height:25%;;
-		margin-top:5%;
-		color:white;
-		font-size:400%;
-		background-color:#FF9E67;
-		border-radius:10px;
-	}
-	.btn:hover
-	{
-		cursor:pointer;
-		background-color:#FFFDE3 ;
-		color:black;
-	}
-	img
-	{
-		width:30%;
-		height:30%;
-	}
-
-
-
-	.color-div
-	{
-		display: inline-flex;
-		width: 35%;
-		height: 50%;
-		justify-content: center;
-		align-items: baseline;
-	}
-
-	.color-box
-	{
-		width:100%;
-		height:100%;
-	}
-
-
-
-	::-webkit-scrollbar {
-	width: 0px; 
-	background: transparent; 
-	}
-  
-	</style>
+	<link rel="stylesheet" href="choosecolor.css" />
   </head>
+
   <body>
+
   <audio autoplay id="gameAudio">
 	<source src="backgroundsound.mp3" type="audio/mpeg">
 	Your browser does not support the audio tag.
-	</audio>
+  </audio>
+
 	<script>
 		var x = document.getElementById("gameAudio");
 		 x.volume = 0.2;
 	</script>
+
     <div class="title1">
       <h1 align="center" style="margin: 0;">Select background color</h1><br>
     </div>
+
 	<div id="selection">
 		  <!-- <label>
             <input type="radio" name="padcol" id="orange" value="orange" />
@@ -131,7 +60,7 @@
             purple
           </label> -->
 	</div>
-      <div style="text-align: center;">
+    <div class="div-btn">
         <form action="game.php">
           <input
 			class="btn"
@@ -140,7 +69,6 @@
             onclick="return setColor()"
           />
         </form>
-      </div>
     </div>
     <script src="choose.js"></script>
     <script>
@@ -207,7 +135,7 @@
 		}
 	  
 
-	  function setPaddleColor(colors){
+	function setPaddleColor(colors){
 		for(var i=0;i<colors.length;i++)
 		{
 			let color =colors[i]
@@ -222,8 +150,8 @@
 
 			iLabel.innerHTML +=`
 								<div class="color-div">
-								<input type="radio" name="padcol" id="colorcode" value="${color}" ${i==0?"checked":""}/>
-								<div class="color-box" style="background:${color}"></div>
+									<input type="radio" name="padcol" id="colorcode" value="${color}" ${i==0?"checked":""}/>
+									<div class="color-box" style="background:${color}"></div>
 								</div>
 								<div>${colorName}</div>
 								
@@ -234,7 +162,7 @@
 
 		}
 
-		}
+	}
     </script>
   </body>
 </html>
