Ensure GUI is working

--- a/find-the-invisible-dog/color.html
+++ b/find-the-invisible-dog/color.html
@@ -1,17 +1,21 @@
 ﻿<!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
+<head>
+	<meta charset="UTF-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+	<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+	<!--
 	<script
-    src="https://code.jquery.com/jquery-3.5.1.slim.js"
-    integrity="sha256-DrT5NfxfbHvMHux31Lkhxg42LY6of8TaYyK50jnxRnM="
-    crossorigin="anonymous"></script>
+	src="https://code.jquery.com/jquery-3.5.1.slim.js"
+	integrity="sha256-DrT5NfxfbHvMHux31Lkhxg42LY6of8TaYyK50jnxRnM="
+	crossorigin="anonymous"></script>
+	-->
 	<script type="text/javascript" src="./ntc.js"></script>
-	
-    <title>Select the background color!</title>
+
+	<title>Select the background color!</title>
 	<link rel="stylesheet" href="choosecolor.css" />
-  </head>
+</head>
 
   <body>
 	<div id="catchimg"></div>
@@ -22,8 +26,8 @@
   		Your browser does not support the audio tag.
   	</audio>
 
-	<div id="titleimgcontainer">
-		<img id="titleimg">
+	<div id="logoimgcontainer">
+		<img id="logoimg">
 	</div>
 
   	<div class="title1">
