--- a/find-the-invisible-dog/color.html
+++ b/find-the-invisible-dog/color.html
@@ -73,6 +73,7 @@
 					 onclick="return setColor()" />
   		</form>
   	</div>
+	<div class="imgplaceholder"><img id="handimg"></div>
   	<script src="choose.js"></script>
   	<script src="loadItem.js"></script>
   	<script>
