Minor GUI update

--- a/find-the-invisible-dog/color.html
+++ b/find-the-invisible-dog/color.html
@@ -26,12 +26,13 @@
   		Your browser does not support the audio tag.
   	</audio>
 
+
 	<div id="logoimgcontainer">
 		<img id="logoimg">
 	</div>
 
   	<div class="title1">
-  		<h1 align="center" style="margin: 0;">Select background color</h1><br>
+  		Select background color
   	</div>
 
   	<div id="selection">
