Improve hint (gift) feature

--- a/find-the-invisible-dog/game.html
+++ b/find-the-invisible-dog/game.html
@@ -23,7 +23,9 @@
         </div>
 
         <div class="container-item2">
-            <p class="info">You find <span class="span1">0</span></p>  <!-- <br />current score : <span class="span2"></span> -->
+            <p class="info">You find <span class="span1">0</span>  
+            <br />Dogs left : <span class="span2"></span>
+            </p>
         </div>
 
         <div class="container-item3">
@@ -48,10 +50,17 @@
 
     <div id="doggy">
         <img id="catchimg">
+        <span>Catched dog!!!</span>
     </div>
 
     <div id="catty">
         <img id="trapimg">
+        <span>Catched cat</span>
+    </div>
+
+    <div id="hintad">
+        <img id="adimg" src="img/tmlogo.png">
+        <span></span>
     </div>
 
     <div id="display" class="modal">
