--- a/find-the-invisible-dog/game.html
+++ b/find-the-invisible-dog/game.html
@@ -10,9 +10,9 @@
 </head>
 <body>
     <audio autoplay id="BGM">
-  		<source type="audio/mpeg">
-  		Your browser does not support the audio tag.
-  	</audio>
+        <source type="audio/mpeg">
+        Your browser does not support the audio tag.
+    </audio>
 
     <div id="logoimgcontainer">
         <img id="logoimg">
@@ -23,19 +23,21 @@
         </div>
 
         <div class="container-item2">
-            <p class="info">You find <span class="span1">0</span>  
-            <br />Dogs left : <span class="span2"></span>
+            <p class="info">
+                You find <span class="span1">0</span>
+                <br />Dogs left : <span class="span2"></span>
             </p>
         </div>
 
         <div class="container-item3">
             <canvas id="vcanvas">
-                <video id="video"></video>  
+                <video id="video"></video>
             </canvas> <!-- video canvas -->
         </div>
 
         <div class="container-item4">
             <canvas id="canvas"></canvas>
+            <div id="freeze"></div>
             <div id="handimgcontainer"><img id="handimg"></div>
             <div id="giftimgcontainer"><img id="giftimg"></div>
             <img id="backgroundimg" src="grass.jpg">
@@ -55,9 +57,8 @@
 
     <div id="catty">
         <img id="trapimg">
-        <span>Catched cat</span>
+        <span>Catched cat!!<br />freeze!!!</span>
     </div>
-
     <div id="hintad">
         <img id="adimg" src="img/tmlogo.png">
         <span></span>
@@ -76,9 +77,9 @@
     <script src="loadItem.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/handtrackjs/dist/handtrack.min.js"></script>
     <script src="loadCanvas.js"></script>
-	<script src="state.js"></script>
+    <script src="state.js"></script>
     <script src="spawnableItem.js"></script>
-	<script src="choose.js"></script>
+    <script src="choose.js"></script>
     <script src="loadHandtrack.js"></script>
     <script src='https://kit.fontawesome.com/a076d05399.js'></script>
 </body>
