changed new cdn: handtrackjs

--- a/find-the-invisible-dog/game.html
+++ b/find-the-invisible-dog/game.html
@@ -24,6 +24,7 @@
 
         <div class="container-item2">
             <p class="info">You find <span class="span1">0</span></p>  <!-- <br />current score : <span class="span2"></span> -->
+            <p class="noticeText"></p>
         </div>
 
         <div class="container-item3">
@@ -37,6 +38,7 @@
             <div id="handimgcontainer"><img id="handimg"></div>
             <div id="giftimgcontainer"><img id="giftimg"></div>
             <img id="backgroundimg" src="grass.jpg">
+            <canvas id="giftCanvas"></canvas>
         </div>
     </div>
 
@@ -65,12 +67,12 @@
     </div>
 
     <script src="loadItem.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/handtrackjs/dist/handtrack.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/handtrackjs@0.0.13/dist/handtrack.min.js"></script>
     <script src="loadCanvas.js"></script>
 	<script src="state.js"></script>
     <script src="spawnableItem.js"></script>
 	<script src="choose.js"></script>
-    <script src="loadHandtrack.js"></script>
+    <script type="module" src="loadHandtrack.js"></script>
     <script src='https://kit.fontawesome.com/a076d05399.js'></script>
 </body>
 </html>
