Fixed some bugs, added new gift UI

--- a/find-the-invisible-dog/index.html
+++ b/find-the-invisible-dog/index.html
@@ -37,7 +37,7 @@ Click to play &#9836;
 			</p>
 			<p>
 				&#10049; Please find three <b>DOGSSS</b> in seconds!<br>
-				<img id="catchimg"><br><br>
+				<img id="targetimg"><br><br>
 			</p>
 			<p>
 				&#10049; Be Careful there will be a random <b>CAT</b>!<br>
@@ -55,7 +55,6 @@ Click to play &#9836;
 		<div class="scroll-down" onclick="document.getElementById('btn').scrollIntoView();">
 			<img src="img/scroll-down.png">
 		</div>
-		<div class="imgplaceholder"><img id="handimg"></div>
 	</div>
 	<script src="loadItem.js"></script>
 </body>
