--- a/find-the-invisible-dog/game.html
+++ b/find-the-invisible-dog/game.html
@@ -46,10 +46,11 @@
                 <canvas id="canvas"></canvas>
                 <div id="freeze"><p>freeze!!</p></div>
                 <div id="handimgcontainer"><img id="handimg"></div>
-                <div id="hintimgcontainer"><img id="hintimg"></div>
+                <div id="hintimgcontainer"><img id="hintimg" /><img id="openinghint" /></div>
                 <div id="targetimgcontainer"><img id="targetimg" /></div>
                 <div id="trapimgcontainer"><img id="trapimg" /></div>
                 <img id="canvasbg" />
+                <div id="openedhintcontainer"><img id="openedhint" /><p>An ads <br /> Extra 20 secs!!</p></div>
             </div>
         </div>
     </div>
