Minor UI Improvement, added ads

--- a/find-the-invisible-dog/game.html
+++ b/find-the-invisible-dog/game.html
@@ -39,22 +39,26 @@
             <div id="fence"><img id="fencegui"/></div>
             <div id="infocontainer">
                 <img id="infoboard" />
-                <p id="info">catch 5 dogs</p>
+                <img id="infoads"/>
             </div>
             <div id="canvascontainer">
                 <canvas id="guicanvas"></canvas>
                 <canvas id="canvas"></canvas>
-                <div id="freeze"><p>freeze!!</p></div>
                 <div id="handimgcontainer"><img id="handimg"></div>
                 <div id="hintimgcontainer"><img id="hintimg" /><img id="openinghint" /></div>
                 <div id="targetimgcontainer"><img id="targetimg" /></div>
                 <div id="trapimgcontainer"><img id="trapimg" /></div>
                 <img id="canvasbg" />
-                <div id="openedhintcontainer"><img id="openedhint" /><p>An ads <br /> Extra 20 secs!!</p></div>
             </div>
         </div>
     </div>
 
+    <div id="messagecontainer">
+        <img id="openedhint" />
+        <img id="hintad" />
+        <p id="message">fvk</p>
+    </div>
+        
     <div id="splash" class="splashT">
         <p id="splash-text"></p>
         <img src="3.gif" id="loading" class="cat-loading">
