Added splash screen

--- a/find-the-invisible-dog/index.html
+++ b/find-the-invisible-dog/index.html
@@ -42,12 +42,12 @@ Click to play &#9836;
 			<p>
 				&#10049; Be Careful there will be a random <b>CAT</b>!<br>
 				&nbsp;&nbsp;There will be<b> cat sound </b>when you near the CAT!<br>
-				&nbsp;&nbsp;CAT will reset everything and u need to find again!<br>
+				&nbsp;&nbsp;CAT will freeze your game<br>
 				<img id="trapimg"><br><br>
 			</p>
 			
 			<div class="ls">
-				<input type="submit" name="gamebtn" value="Start Game" id="btn"  onclick="window.location.href = 'color.html';">
+				<input type="submit" name="gamebtn" value="Start Game" id="btn"  onclick="window.location.href = 'game.html';">
 			</div>
 		</div>
 
