--- a/find-the-invisible-dog/game.html
+++ b/find-the-invisible-dog/game.html
@@ -10,71 +10,82 @@
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 </head>
 <body>
+    <div id="blackscreen"></div>
+
+    <div id="splashscreen">
+        <video autoplay muted loop poster="Assets/SplashScreen/FindTheInvisibleDog.png">
+            <source src="Assets/SplashScreen/FindTheInvisibleDog.mp4" type="video/mp4" />
+            Your browser does not support the video tag
+        </video>
+    </div>
+
     <audio autoplay id="BGM">
         <source type="audio/mpeg">
         Your browser does not support the audio tag.
     </audio>
 
-    <div id="gui-container">
-        <div id="count" class="container-item1">
-            <p id="timer">00:00</p>
-            <img id="timergui" />
-        </div>
-
-        <div class="container-item2">
-            <div id="basketdoggycontainer"></div>
-            <img id="basketgui" />
-        </div>
-
-        <div class="container-item3">
-            <div id="vcanvascontainer">
-                <canvas id="vcanvas">
-                    <video id="video"></video>
-                </canvas> <!-- video canvas -->
+    <main>
+        <div id="gui-container">
+            <div id="count" class="container-item1">
+                <p id="timer">00:00</p>
+                <img id="timergui" />
             </div>
-            <img id="vcanvasgui" />
-        </div>
 
-        <div class="container-item4">
-            <div id="fence"><img id="fencegui"/></div>
-            <div id="infocontainer">
-                <img id="infoboard" />
-                <img id="infoads"/>
+            <div class="container-item2">
+                <div id="basketdoggycontainer"></div>
+                <img id="basketgui" />
             </div>
-            <div id="canvascontainer">
-                <canvas id="guicanvas"></canvas>
-                <canvas id="canvas"></canvas>
-                <div id="handimgcontainer"><img id="handimg"></div>
-                <div id="hintimgcontainer"><img id="hintimg" /><img id="openinghint" /></div>
-                <div id="targetimgcontainer"><img id="targetimg" /></div>
-                <div id="trapimgcontainer"><img id="trapimg" /></div>
-                <img id="canvasbg" />
+
+            <div class="container-item3">
+                <div id="vcanvascontainer">
+                    <canvas id="vcanvas">
+                        <video id="video"></video>
+                    </canvas> <!-- video canvas -->
+                </div>
+                <img id="vcanvasgui" />
+            </div>
+
+            <div class="container-item4">
+                <div id="fence"><img id="fencegui" /></div>
+                <div id="infocontainer">
+                    <img id="infoboard" />
+                    <img id="infoads" />
+                </div>
+                <div id="canvascontainer">
+                    <canvas id="guicanvas"></canvas>
+                    <canvas id="canvas"></canvas>
+                    <div id="handimgcontainer"><img id="handimg"></div>
+                    <div id="hintimgcontainer"><img id="hintimg" /><img id="openinghint" /></div>
+                    <div id="targetimgcontainer"><img id="targetimg" /></div>
+                    <div id="trapimgcontainer"><img id="trapimg" /></div>
+                    <img id="canvasbg" />
+                </div>
             </div>
         </div>
-    </div>
 
-    <div id="messagecontainer">
-        <img id="openedhint" />
-        <img id="hintad" />
-        <p id="message">fvk</p>
-    </div>
-        
-    <div id="splash" class="splashT">
-        <p id="splash-text"></p>
-        <img src="3.gif" id="loading" class="cat-loading">
-        <img src="img/loading2.gif" id="loading">
-    </div>
-
-    <div id="display" class="modal">
-        <div class="modal-content animate">
-            <!-- <img src="<?php echo " images /".$row['image']; ?>" class="tmLogo"></img> -->
-            <img src="img/tmlogo.png" class="tmlogo">
-            <p id="score"></p>
-            <!-- <button id="button_tg" class="button">Try Again</button> -->
-            <button id="button_h" class="button">Scoreboard</button>
+        <div id="messagecontainer">
+            <img id="openedhint" />
+            <img id="hintad" />
+            <p id="hintmessage">fvk</p>
+            <p id="freezemessage">freeze!!</p>
         </div>
-    </div>
-
+        <!--
+        <div id="splash" class="splashT">
+            <p id="splash-text"></p>
+            <img src="3.gif" id="loading" class="cat-loading">
+            <img src="img/loading2.gif" id="loading">
+        </div>
+            -->
+        <div id="display" class="modal">
+            <div class="modal-content animate">
+                <!-- <img src="<?php echo " images /".$row['image']; ?>" class="tmLogo"></img> -->
+                <img src="img/tmlogo.png" class="tmlogo">
+                <p id="score"></p>
+                <!-- <button id="button_tg" class="button">Try Again</button> -->
+                <button id="button_h" class="button">Scoreboard</button>
+            </div>
+        </div>
+    </main>
     <script src="loadItem.js"></script>
     <script src="loadCanvas.js"></script>
     <script src="state.js"></script>
