prefinal version; dog animation without fade

--- a/find-the-invisible-dog/game.html
+++ b/find-the-invisible-dog/game.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -9,9 +10,10 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 </head>
+
 <body>
     <audio autoplay id="BGM">
-        <source type="audio/mpeg">
+        <source type="audio/mpeg" />
         Your browser does not support the audio tag.
     </audio>
 
@@ -20,7 +22,6 @@
             <p id="timer">00:00</p>
             <img id="timergui" />
         </div>
-
         <div class="container-item2">
             <div id="basketdoggycontainer"></div>
             <img id="basketgui" />
@@ -29,23 +30,26 @@
         <div class="container-item3">
             <div id="vcanvascontainer">
                 <canvas id="vcanvas">
-                    <video id="video"></video>
-                </canvas> <!-- video canvas -->
+                    <video id="video"></video>  
+                </canvas>
             </div>
             <img id="vcanvasgui" />
         </div>
-
+        
+        <canvas id="doganimate"></canvas>
         <div class="container-item4">
-            <div id="fence"><img id="fencegui"/></div>
+            <div id="fence"><img id="fencegui" /></div>
             <div id="infocontainer">
                 <img id="infoboard" />
-                <img id="infoads"/>
+                <img id="infoads" />
             </div>
             <div id="canvascontainer">
                 <canvas id="guicanvas"></canvas>
                 <canvas id="canvas"></canvas>
-                <div id="handimgcontainer"><img id="handimg"></div>
-                <div id="hintimgcontainer"><img id="hintimg" /><img id="openinghint" /></div>
+                <div id="handimgcontainer"><img id="handimg" /></div>
+                <div id="hintimgcontainer">
+                    <img id="hintimg" /><img id="openinghint" />
+                </div>
                 <div id="targetimgcontainer"><img id="targetimg" /></div>
                 <div id="trapimgcontainer"><img id="trapimg" /></div>
                 <img id="canvasbg" />
@@ -58,17 +62,17 @@
         <img id="hintad" />
         <p id="message">fvk</p>
     </div>
-        
+
     <div id="splash" class="splashT">
         <p id="splash-text"></p>
-        <img src="3.gif" id="loading" class="cat-loading">
-        <img src="img/loading2.gif" id="loading">
+        <img src="3.gif" id="loading" class="cat-loading" />
+        <img src="img/loading2.gif" id="loading" />
     </div>
 
     <div id="display" class="modal">
         <div class="modal-content animate">
             <!-- <img src="<?php echo " images /".$row['image']; ?>" class="tmLogo"></img> -->
-            <img src="img/tmlogo.png" class="tmlogo">
+            <img src="img/tmlogo.png" class="tmlogo" />
             <p id="score"></p>
             <!-- <button id="button_tg" class="button">Try Again</button> -->
             <button id="button_h" class="button">Scoreboard</button>
@@ -81,6 +85,7 @@
     <script src="spawnableItem.js"></script>
     <script src="choose.js"></script>
     <script src="loadHandtrack.js"></script>
-    <script src='https://kit.fontawesome.com/a076d05399.js'></script>
+    <script src="https://kit.fontawesome.com/a076d05399.js"></script>
 </body>
+
 </html>
