--- a/find-the-invisible-dog/index.html
+++ b/find-the-invisible-dog/index.html
@@ -47,7 +47,7 @@ Click to play &#9836;
 			</p>
 			
 			<div class="ls">
-				<input type="submit" name="gamebtn" value="Start Game" id="btn"  onclick="window.location.href = 'color.html';">
+				<input type="submit" name="gamebtn" value="Start Game" id="btn"  onclick="window.location.href = 'game.html';">
 			</div>
 		</div>
 
