pre final version: fixed canvas naming confusion for gift reward

--- a/find-the-invisible-dog/game.html
+++ b/find-the-invisible-dog/game.html
@@ -44,7 +44,7 @@
                 </div>
                 <img id="vcanvasgui" />
             </div>
-
+            <canvas id="doganimate"></canvas>
             <div class="container-item4">
                 <div id="fence"><img id="fencegui" /></div>
                 <div id="infocontainer">
@@ -86,9 +86,9 @@
             </div>
         </div>
     </main>
+    <script src="state.js"></script>
     <script src="loadItem.js"></script>
     <script src="loadCanvas.js"></script>
-    <script src="state.js"></script>
     <script src="spawnableItem.js"></script>
     <script src="choose.js"></script>
     <script src="loadHandtrack.js"></script>
