Added remaining dogs UI

--- a/find-the-invisible-dog/game.html
+++ b/find-the-invisible-dog/game.html
@@ -44,6 +44,7 @@
 
             <div class="container-item2">
                 <div id="basketdoggycontainer"></div>
+                <div id="emptydogcontainer"></div>
                 <img id="basketgui" />
             </div>
 
