Minor UI improvement

--- a/find-the-invisible-dog/index.html
+++ b/find-the-invisible-dog/index.html
@@ -69,6 +69,7 @@
 	<script>
 		window.onload = () => {
 			setTimeout(function () {
+                document.querySelector("#splashscreen").style.backgroundColor = "transparent";
 				document.querySelector("#splashscreen").style.display = "none";
 			}, 3000);
 		}
