--- a/find-the-invisible-dog/game.html
+++ b/find-the-invisible-dog/game.html
@@ -12,12 +12,23 @@
 <body>
     <div id="blackscreen"></div>
 
+    <div id="brocollicontainer">
+        <img id="brocolli1" class="brocolli"/>
+        <img id="brocolli2" class="brocolli"/>
+        <img id="brocolli3" class="brocolli-1"/>
+        <img id="brocolli4" class="brocolli"/>
+        <img id="brocolli5" class="brocolli"/>
+        <img id="brocolli6" class="brocolli-1" />
+        <img id="brocolli7" class="brocolli-1" />
+    </div>
+
     <div id="splashscreen">
         <video autoplay muted loop poster="Assets/bg-06.jpg">
             <source src="Assets/SplashScreen/FindTheInvisibleDog.mp4" type="video/mp4" />
             Your browser does not support the video tag
         </video>
     </div>
+
     <div id="gameover">
         <img id="gameoverui" />
         <div id="gameovercontent">
@@ -61,7 +72,11 @@
                 <div id="fence"><img id="fencegui" /></div>
                 <div id="infocontainer">
                     <img id="infoboard" />
-                    <img id="infoads" />
+                    <div id="adscontainer">
+                        <img id="infoads1" class="infoads" />
+                        <img id="infoads2" class="infoads" />
+                        <img id="infoads3" class="infoads" />
+                    </div>
                 </div>
                 <div id="canvascontainer">
                     <canvas id="guicanvas"></canvas>
@@ -79,7 +94,10 @@
             <img id="openedhint" />
             <img id="hintad" />
             <p id="hintmessage"></p>
-            <p id="freezemessage">freeze!!<span></span></p>
+            <div id="freezemessagecontainer">
+                <img id="freezemessage">
+                <p id="freezetimer"></p>
+            </div>
         </div>
         <!--
         <div id="splash" class="splashT">
