view render prediction

--- a/find-the-invisible-dog/game.html
+++ b/find-the-invisible-dog/game.html
@@ -55,6 +55,7 @@
                     <canvas id="guicanvas"></canvas>
                     <canvas id="canvas"></canvas>
                     <div id="handimgcontainer"><img id="handimg"></div>
+                    <!-- <img id="handimg" /> -->
                     <div id="hintimgcontainer"><img id="hintimg" /><img id="openinghint" /></div>
                     <div id="targetimgcontainer"><img id="targetimg" /></div>
                     <div id="trapimgcontainer"><img id="trapimg" /></div>
