disabled renderPrediction for production

--- a/find-the-invisible-dog/game.html
+++ b/find-the-invisible-dog/game.html
@@ -120,7 +120,7 @@
     <script src="state.js"></script>
     <script src="spawnableItem.js"></script>
     <script src="choose.js"></script>
-    <script src="loadHandtrack.js"></script>
+    <script src="loadHandtrack.js?v=1"></script>
     <script src='https://kit.fontawesome.com/a076d05399.js'></script>
 </body>
 </html>
