Added tutorial and loading symbol

--- a/find-the-invisible-dog/game.html
+++ b/find-the-invisible-dog/game.html
@@ -12,6 +12,8 @@
 <body>
     <div id="blackscreen"></div>
 
+    <img id="loading" src="img/loading4.gif"/>
+
     <div id="brocollicontainer">
         <img id="brocolli1" class="brocolli"/>
         <img id="brocolli2" class="brocolli"/>
